--- a/plugin.xml
+++ b/plugin.xml
@@ -17,6 +17,8 @@
     <engine name="cordova-android" version=">=9.0.0"/>
     <engine name="cordova-ios" version=">=6.0.0"/>
   </engines>
+  
+  <dependency id="cordova-outsystems-firebase-core" url="https://github.com/OutSystems/cordova-outsystems-firebase-core.git#1.0.0"/>
 
   <platform name="android">
     <hook type="before_compile" src="hooks/android/beforeCompile.js"/>
